update reedw photo

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h2 class="text-3xl md:text-4xl font-bold text-brand-secondary mb-6">
                 About The Teacher
             </h2>
-            <img src="img/reed-goodey.png" class="w-full max-w-[500px] mb-3 mx-auto" />
+            <img src="img/zoom-class.png" class="w-full max-w-[500px] mb-3 mx-auto" />
             <p class="text-lg leading-relaxed max-w-3xl mx-auto mb-6">
                 Hi, I'm Reed Goodey! I have been a world language teacher for more than 3 decades. I love using the best Accelerated Learning techniques in the world to help kids learn to speak Spanish in a fraction of the time of conventional online and classroom programs…and have enormous fun doing it.
             </p>
